syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetFoundBalance (Id) returns (Amount);
  rpc GetUserBalance (Id) returns (Amount);
  rpc GiveToFound (UserToFound) returns (Added);
  rpc AddBalance (UserAmount) returns (Added);
  rpc CreateFound (FoundOwner) returns (Added);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Id {
  int64 id = 1;
}

message Amount {
  int64 value = 1;
}

message UserToFound {
  int64 userId = 1;
  int64 foundId = 2;
  int64 value = 3;
}

message Added {
  bool status = 1;
}

message UserAmount {
  int64 userId = 1;
  int64 value = 2;
}

message FoundOwner {
  string name = 1;
  string owner = 2;
}